now logout button brings to user

--- a/src/main/resources/static/indexCompany.html
+++ b/src/main/resources/static/indexCompany.html
@@ -30,7 +30,7 @@
 	document.getElementById('logoutBtn').addEventListener('click', function(){
 		// Clear all localStorage entries to fully sign out the client
 		localStorage.clear();
-		globalThis.location.href = '/login.html';
+		globalThis.location.href = '/index.html';
 	});
 	</script>
 </main>
