not showing ids to fornten d

--- a/src/main/resources/static/jobPostDetails.html
+++ b/src/main/resources/static/jobPostDetails.html
@@ -14,8 +14,8 @@
     <main class="wide-card">
       <h2 id="title">Job Post</h2>
       <div id="details">
-        <p><strong>ID:</strong> <span id="postId"></span></p>
-        <p><strong>Company ID:</strong> <span id="companyId"></span></p>
+  <p style="display:none;"><strong>ID:</strong> <span id="postId"></span></p>
+  <p style="display:none;"><strong>Company ID:</strong> <span id="companyId"></span></p>
         <p><strong>Name:</strong> <span id="name"></span></p>
         <p><strong>Description:</strong> <span id="description"></span></p>
         <p><strong>Duration:</strong> <span id="duration"></span></p>
