--- a/src/main/resources/static/displayJobApplication.html
+++ b/src/main/resources/static/displayJobApplication.html
@@ -21,8 +21,9 @@
       <table id="appsTable" style="width:100%; border-collapse: collapse; display:none;">
         <thead>
           <tr>
-            <th style="border:1px solid #ccc; padding:8px; text-align:left;">ID</th>
-            <th style="border:1px solid #ccc; padding:8px; text-align:left;">Company ID</th>
+            <!-- Hidden ID and Company ID columns -->
+            <th style="display:none; border:1px solid #ccc; padding:8px; text-align:left;">ID</th>
+            <th style="display:none; border:1px solid #ccc; padding:8px; text-align:left;">Company ID</th>
             <th style="border:1px solid #ccc; padding:8px; text-align:left;">Name</th>
             <th style="border:1px solid #ccc; padding:8px; text-align:left;">Description</th>
             <th style="border:1px solid #ccc; padding:8px; text-align:left;">Duration</th>
@@ -65,8 +66,8 @@
             const idVal = p.post_id;
             const compVal = p.company_id;
             tr.innerHTML = `
-              <td style="border:1px solid #ccc; padding:8px;">${idVal}</td>
-              <td style="border:1px solid #ccc; padding:8px;">${compVal}</td>
+                <td style="display:none; border:1px solid #ccc; padding:8px;">${idVal}</td>
+                <td style="display:none; border:1px solid #ccc; padding:8px;">${compVal}</td>
               <td style="border:1px solid #ccc; padding:8px;">${p.name || ''}</td>
               <td style="border:1px solid #ccc; padding:8px;">${p.description || ''}</td>
               <td style="border:1px solid #ccc; padding:8px;">${p.duration || ''}</td>
