--- a/src/main/resources/static/profileCompany.html
+++ b/src/main/resources/static/profileCompany.html
@@ -51,33 +51,34 @@
     </footer>
 
     <script>
+      // Load company profile for the logged account
       async function loadCompany() {
         const loggedAccountId = localStorage.getItem('loggedAccountId');
         const note = document.getElementById('note');
-          if (!loggedAccountId) {
-            note.textContent = 'No logged account found. Please log in.';
+        if (!loggedAccountId) {
+          note.textContent = 'No logged account found. Please log in.';
           return;
         }
 
-          try {
-            const res = await fetch(`/Company/getCompanyByAccountId/${encodeURIComponent(loggedAccountId)}`);
+        try {
+          const res = await fetch(`/Company/getCompanyByAccountId/${encodeURIComponent(loggedAccountId)}`);
           if (res.status === 404) {
             note.textContent = 'No company profile found for this account.';
             return;
           }
           if (!res.ok) throw new Error('Failed to load company');
 
-          const c = await res.json();
+          const company = await res.json();
 
-          const cid = c.company_id || c.id || '';
-          document.getElementById('companyId').value = cid;
-          document.getElementById('name').value = c.name || '';
-          document.getElementById('email').value = c.email || '';
-          document.getElementById('description').value = c.description || '';
+          // backend uses companyId as the primary key
+          document.getElementById('companyId').value = company.companyId || '';
+          document.getElementById('name').value = company.name || '';
+          document.getElementById('email').value = company.email || '';
+          document.getElementById('description').value = company.description || '';
 
-          document.getElementById('viewName').textContent = c.name || '';
-          document.getElementById('viewEmail').textContent = c.email || '';
-          document.getElementById('viewDescription').textContent = c.description || '';
+          document.getElementById('viewName').textContent = company.name || '';
+          document.getElementById('viewEmail').textContent = company.email || '';
+          document.getElementById('viewDescription').textContent = company.description || '';
 
           note.style.display = 'none';
           document.getElementById('viewMode').style.display = 'block';
@@ -87,39 +88,82 @@
         }
       }
 
-      // Edit button
+      // Toggle to edit mode
       document.getElementById('editBtn').addEventListener('click', function(){
         document.getElementById('viewMode').style.display = 'none';
         document.getElementById('editMode').style.display = 'block';
       });
 
-      // Cancel
+      // Cancel edit
       document.getElementById('cancelBtn').addEventListener('click', function(){
         document.getElementById('editMode').style.display = 'none';
         document.getElementById('viewMode').style.display = 'block';
       });
 
+      // Submit save handler: ensure we have the company id, fetching it by account id when missing
       document.getElementById('editMode').addEventListener('submit', async function(e){
         e.preventDefault();
-        const id = document.getElementById('companyId').value;
-        if (!id) return;
+
         const payload = {
           name: document.getElementById('name').value,
           email: document.getElementById('email').value,
           description: document.getElementById('description').value
         };
         const msg = document.getElementById('message');
+        const saveBtn = e.target.querySelector('button[type="submit"]');
+        saveBtn.disabled = true;
+
         try {
-          const res = await fetch(`/Company/updateCompany/${id}`, {
+          // Try to get id from hidden input
+          let id = document.getElementById('companyId').value;
+
+          // If missing, fetch company by account id to obtain it
+          if (!id) {
+            const loggedAccountId = localStorage.getItem('loggedAccountId');
+            if (!loggedAccountId) {
+              msg.style.color = 'red';
+              msg.textContent = 'No logged account found. Please log in.';
+              saveBtn.disabled = false;
+              return;
+            }
+
+            const res = await fetch(`/Company/getCompanyByAccountId/${encodeURIComponent(loggedAccountId)}`);
+            if (res.status === 404) {
+              msg.style.color = 'red';
+              msg.textContent = 'No company profile found for this account.';
+              saveBtn.disabled = false;
+              return;
+            }
+            if (!res.ok) {
+              throw new Error('Failed to fetch company id');
+            }
+
+            const company = await res.json();
+            id = company.companyId;
+            // persist the id in the hidden input for subsequent saves
+            document.getElementById('companyId').value = id || '';
+          }
+
+          // Perform update
+          const updateRes = await fetch(`/Company/updateCompany/${encodeURIComponent(id)}`, {
             method: 'PUT',
             headers: {'Content-Type': 'application/json'},
             body: JSON.stringify(payload)
           });
-          if (!res.ok) {
+
+          if (!updateRes.ok) {
+            // parse body for details
+            let bodyText = '';
+            try { bodyText = JSON.stringify(await updateRes.json()); } catch(_) {
+              try { bodyText = await updateRes.text(); } catch(_) { bodyText = '<no body>'; }
+            }
+            console.error('Update company failed', updateRes.status, bodyText);
             msg.style.color = 'red';
-            msg.textContent = 'Failed to save changes.';
+            msg.textContent = `Failed to save changes (${updateRes.status}): ${bodyText}`;
+            saveBtn.disabled = false;
             return;
           }
+
           // update view
           document.getElementById('viewName').textContent = payload.name || '';
           document.getElementById('viewEmail').textContent = payload.email || '';
@@ -129,10 +173,12 @@
           msg.textContent = 'Saved successfully.';
           document.getElementById('editMode').style.display = 'none';
           document.getElementById('viewMode').style.display = 'block';
+          saveBtn.disabled = false;
         } catch (err) {
-          console.error(err);
+          console.error('Error saving company', err);
           msg.style.color = 'red';
-          msg.textContent = 'Error saving changes.';
+          msg.textContent = `Error saving changes: ${err && err.message ? err.message : err}`;
+          saveBtn.disabled = false;
         }
       });
 
