--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Login | CareerTracker</title>
 </head>
 <body>
 
@@ -24,71 +24,65 @@
 
         <button type="submit">Login</button>
     </form>
-    <p id="message" aria-live="polite"></p>
 
-    <script>
-    document.getElementById('loginForm').addEventListener('submit', async function(e){
-        e.preventDefault();
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
+    <p id="message" aria-live="polite"></p>
+</main>
+
+<footer>
+    <p>© 2026 CareerTracker</p>
+</footer>
+
+<script>
+document.getElementById('loginForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value;
+    const msg = document.getElementById('message');
+
+    msg.textContent = '';
+    msg.style.color = 'black';
+
+    try {
         const res = await fetch('/Account/authenticate', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email, password })
         });
 
-        const msg = document.getElementById('message');
         if (!res.ok) {
             msg.style.color = 'red';
-            msg.textContent = 'Login failed';
+            msg.textContent = 'Invalid email or password';
             return;
         }
 
-        // Server returned OK for authentication (boolean). Now fetch accounts to find the authenticated account
+        const data = await res.json();
+
+        if (!data.token) {
+            msg.style.color = 'red';
+            msg.textContent = 'Authentication failed (no token)';
+            return;
+        }
+
+        // ✅ Store JWT (session)
+        localStorage.setItem('jwt', data.token);
+        localStorage.setItem('loggedEmail', email);
+
         msg.style.color = 'green';
         msg.textContent = 'Login successful';
 
-        try {
-            const acctRes = await fetch(`/Account/getAccountByEmail/${encodeURIComponent(email)}`);
-            if (acctRes.status === 404) {
-                msg.style.color = 'red';
-                msg.textContent = 'Account record not found.';
-                return;
-            }
-            if (!acctRes.ok) {
-                msg.style.color = 'red';
-                msg.textContent = 'Could not retrieve account info.';
-                return;
-            }
+        // ✅ Redirect (role-based later via JWT claims)
+        setTimeout(() => {
+            window.location.href = '/index.html';
+        }, 500);
 
-            const account = await acctRes.json();
-
-            // store into localStorage
-            try {
-                if (account.email) localStorage.setItem('loggedEmail', account.email);
-                const acctId = account.accountId ?? account.account_id ?? account.id ?? null;
-                if (acctId) localStorage.setItem('loggedAccountId', String(acctId));
-            } catch (_) {}
-
-            const t = (account.type) ? String(account.type).toUpperCase() : '';
-            if (t.includes('COMPANY')) {
-                window.location.href = '/indexCompany.html';
-            } else {
-                window.location.href = '/indexUser.html';
-            }
-        } catch (err) {
-            msg.style.color = 'red';
-            msg.textContent = 'Error retrieving account information.';
-        }
-
-        
-    });
-    </script>
-</main>
-
-<footer>
-    <p>© 2026 CareerTracker</p>
-</footer>
+    } catch (err) {
+        console.error(err);
+        msg.style.color = 'red';
+        msg.textContent = 'Server error. Please try again later.';
+    }
+});
+</script>
 
 </body>
 </html>
