update to setup for jwt

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
         <main class="index-landing">
             <p>Welcome — pick an action:</p>
             <div class="button-group">
-                <a href="/registerAccount.html"><button>Register</button></a>
+                <a href="/register.html"><button>Register</button></a>
                 <a href="/login.html"><button>Login</button></a>
             </div>
         </main>
