updated security config, now the login brings back to the indepage as we need to setup role for corerct inde redirect

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -66,16 +66,11 @@
             }
         }
 
-        // redirect to correct index page
-        if ((accountDto && accountDto.type) ? accountDto.type === 'COMPANY' : data.type === 'COMPANY') {
-            setTimeout(() => {
-                globalThis.location.href = '/indexCompany.html';
-            }, 500);
-        } else {
-            setTimeout(() => {
-                globalThis.location.href = '/indexUser.html';
-            }, 500);
-        }
+        // redirect 
+        setTimeout(() => {
+            globalThis.location.href = '/login.html';
+        }, 500);
+
     });
     </script>
 </main>
